# TeleAI

./: .gitignore  Dockerfile  README.md  devbox.json  main.py  pyproject.toml
data/: nokia_5g_core_manual.txt
src/: main.py  schemas.py
src/engine/: rag_core.py
tests/: test_api.py
