[project]
name = "teleai"
version = "0.1.0"
description = "Telecom AI for telemetry data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "uvicorn>=0.47.0",
]
